remove requests added groups

--- a/frontend/app/templates/dashboard/profile.hbs
+++ b/frontend/app/templates/dashboard/profile.hbs
@@ -30,17 +30,12 @@
                   {{fa-icon 'credit-card'}} Subscriptions
                 {{/link-to}}
               {{/link-li}}
-              {{#link-li}}
-                {{#link-to 'dashboard.profile.requests'}}
-                  {{fa-icon 'user-plus'}} Sent Requests
-                {{/link-to}}
-              {{/link-li}}
             {{/if}}
             {{#link-li}}
-              {{#link-to 'dashboard.profile.received-requests'}}
-                {{fa-icon 'users'}} Received Requests
-              {{/link-to}}
-            {{/link-li}}
+            {{#link-to 'dashboard.profile.organizations'}}
+              {{fa-icon 'users'}} Organizations
+            {{/link-to}}
+          {{/link-li}}
           </ul>
         </div>
       </div>
