--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,7 +15,28 @@
  */
 
  @import "font-awesome";
-
+  .jumbotron {
+    z-index: 0;
+    position: relative;
+    overflow: hidden;
+  }
+  .vertical-align {
+    min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+    min-height: 100vh; /* These two lines are counted as one :-)       */
+    display: flex;
+    align-items: center;
+  }
+  .jumbotron video {
+    position: fixed;
+     top: 0;
+     left: 0;
+     bottom: 0;
+     right: 0;
+     z-index: -1;
+     background-size: cover;
+     transition: 1s opacity;
+     opacity: 0.5;
+  }
   .navbar-nav {
     a {
       font-weight: 500;
@@ -23,6 +44,7 @@
       border-right: none!important;
     }
   }
+
 
   .space {
     margin: 100px 0;
