--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -22,20 +22,23 @@
   </div>
 </div>
 
-<section class="content">
+<section class="content space">
   <div class="container">
     <div class="row">
-      <div class="col-sm-4">
-        <h3>Courses</h3>
-        <p>Keep track of your entire college curriculum by semester and cumulatively by adding multiple courses to your highly customizable profile. </p>
+      <div class="col-sm-4 text-center">
+        <img src="assets/courses.png" alt="Courses" />
+        <h2>Courses</h2>
+        <p class='lead'>Keep track of your entire academic curriculum cumulatively and by semester is easy. Define your coursework for your highly customizable profile. </p>
       </div>
-      <div class="col-sm-4">
-        <h3>Grades</h3>
-        <p>Fill out your assignments, homeworks, and exams to the best of your ability and it will accurately represent these into your current grade. </p>
+      <div class="col-sm-4 text-center">
+        <img src="assets/grades.png" alt="Grades" />
+        <h2>Grades</h2>
+        <p class='lead'>Fill out your assignments, homeworks, quizzes, and exams to the best of your ability and we will accurately represent your real-time grade during the semester. </p>
      </div>
-      <div class="col-sm-4">
-        <h3>Weights</h3>
-        <p>All courses can be weighted to do all the heavy lifting for you to calculate your grades without having to even touch a calculator.</p>
+      <div class="col-sm-4 text-center">
+        <img src="assets/weights.png" alt="Weights" />
+        <h2>Weights</h2>
+        <p class='lead'>All academic courses can be weighted properly to do all the heavy lifting for you. We weight your grades to accurately represent all of your letter grades.</p>
       </div>
     </div>
   </div>
