fix on bigger screen video

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,6 +36,7 @@
      background-size: cover;
      transition: 1s opacity;
      opacity: 0.5;
+         width: 100%;
   }
   .navbar-nav {
     a {
