final finishes on performance

--- a/frontend/app/templates/dashboard/grades/new.hbs
+++ b/frontend/app/templates/dashboard/grades/new.hbs
@@ -13,7 +13,7 @@
       <div class="form-group">
         <label for="course">Course</label>
         {{view "select"
-           content=model.courses
+           content=courses
            selection=selectedCourse
            optionValuePath="content.id"
            optionLabelPath="content.name"
