leg button style on link

--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -9,7 +9,7 @@
       <p>This application was made to help you track your grades in your college curriculum and properly weigh grades based on your course criteria.</p>
       <p>
         {{#if session.isAuthenticated}}
-          {{#link-to 'dashboard.index' class='btn btn-outline btn-flat'}}
+          {{#link-to 'dashboard.index' class='btn btn-outline btn-flat btn-lg'}}
             Go to Dashboard
           {{/link-to}}
         {{else}}
