--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,10 @@
  */
 
  @import "font-awesome";
+
+ .equal-height {
+   min-height: 375px;
+ }
   .jumbotron {
     z-index: 0;
     position: relative;
