support is loading for student transition

--- a/frontend/app/templates/dashboard/students.hbs
+++ b/frontend/app/templates/dashboard/students.hbs
@@ -1,7 +1,7 @@
 <div class="content-wrapper">
   <section class="content-header">
     <h1>
-      Students
+      Students {{#if isLoading}} {{fa-icon 'spinner' spin=true}} {{/if}}
     </h1>
   </section>
 
