--- a/frontend/app/templates/partials/_footer.hbs
+++ b/frontend/app/templates/partials/_footer.hbs
@@ -1,8 +1,8 @@
 <div class="{{if isDashboard '' 'container'}}">
   <footer class="main-footer">
     <div class="pull-right hidden-xs">
-      Built by <a href="http://www.arinhouck.com" target="_blank" title="Arin Houck Web Development"> Arin Houck </a>
+      Built by <strong><a href="http://www.arinhouck.com" target="_blank" title="Arin Houck Web Development"> Arin Houck </a></strong>
     </div>
-    <strong>Copyright &copy; 2015 <a href="mailto:contact@gradebuildr.com">Gradebuildr</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2015 <a href="mailto:contact@gradebuildr.com">Gradebuildr</a>.</strong> All rights reserved. | <strong>{{link-to 'FAQ' 'faq'}}</strong>
   </footer>
 </div>
