--- a/frontend/app/templates/partials/_header.hbs
+++ b/frontend/app/templates/partials/_header.hbs
@@ -1,7 +1,7 @@
 {{#if isDashboard}}
   <header class="main-header">
     {{#link-to "dashboard.index" class="logo"}}
-      <b>grade</b>buildr
+      <b>grade</b>buildr<span class='sub'>beta</span>
     {{/link-to}}
     <nav class="navbar">
       <a class="sidebar-toggle" {{action 'toggleSidebar'}} role="button">
@@ -21,7 +21,7 @@
       <div class="container">
         <div class="navbar-header">
           {{#link-to "index" class="logo navbar-brand"}}
-            <b>grade</b>buildr
+            <b>grade</b>buildr<span class='sub'>beta</span>
           {{/link-to}}
         </div>
 
