layout ember fixes

--- a/app/views/layouts/ember.html.erb
+++ b/app/views/layouts/ember.html.erb
@@ -11,8 +11,8 @@
     <%= csrf_meta_tags %>
   </head>
   <body class="skin-black">
-    <%#= yield %>
-    <%= render_ember_app :frontend %>
+    <%= yield %>
+    <%#= render_ember_app :frontend %>
   </body>
   <%= render 'analytics' %>
 </html>
